Update 'gqry6whvu-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe:786a232b6bf63306abe8f628b46e6dbe5eb5b1ce@sha256:b66b491081830923f70397e6ddefe55f3c375d4f851b5744eb4e7ab85016d843

--- a/components/gqry6whvu-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/gqry6whvu-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: gqry6whvu-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:786a232b6bf63306abe8f628b46e6dbe5eb5b1ce@sha256:b66b491081830923f70397e6ddefe55f3c375d4f851b5744eb4e7ab85016d843
+          name: container-image
